# haskell-katas

./: README.md
ChessKnight/: ChessKnight.cabal  README.md
ChessKnight/src/: Lib.hs
ChessKnight/test/: Spec.hs
Equation/: Equation.cabal  README.md
Equation/src/: Lib.hs
Equation/test/: Spec.hs
FizzBuzzTazz/: FizzBuzzTazz.cabal
FizzBuzzTazz/src/: Lib.hs
FizzBuzzTazz/test/: Spec.hs
JamHaskellSudoku/: JamHaskellSudoku.cabal  README.md
JamHaskellSudoku/app/: Main.hs
JamHaskellSudoku/src/: Sudoku.hs
JamHaskellSudoku/test/: Spec.hs
JamPokerhand/: JamHaskellPokerhand.cabal  README.md
JamPokerhand/src/: Pokerhand.hs
JamPokerhand/test/: Pokerhand.spec.hs  Spec.hs
diamond/: LICENSE  diamond.cabal
diamond/app/: Main.hs
diamond/src/: Lib.hs
diamond/test/: Spec.hs
kata-list/: README.md  kata-list.cabal
kata-list/src/: Lib.hs
kata-list/test/: Spec.hs
