name:                ChessKnight
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/qmenoret/ChessKnight#readme
license:             BSD3
license-file:        LICENSE
author:              Quentin Menoret
maintainer:          menoret.quentin@gmail.com
copyright:           2017 Quentin Menoret
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , Unique
  default-language:    Haskell2010

test-suite ChessKnight-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ChessKnight
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/qmenoret/ChessKnight
