name:                JamHaskellSudoku
version:             0.1.0.0
synopsis:            Haskell Sudoku resolver like Richard Bird's for the Jam de code
description:         Please see README.md
homepage:            https://github.com/atrolla/JamHaskellSudoku#readme
license:             BSD3
author:              Yvan VU
maintainer:          yvan.vu@arolla.fr
copyright:           2016 Atrolla
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Sudoku
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable JamHaskellSudoku-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , JamHaskellSudoku
  default-language:    Haskell2010

test-suite JamHaskellSudoku-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , JamHaskellSudoku
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/atrolla/JamHaskellSudoku
  
