name:                JamHaskellPokerhand
version:             0.1.0.0
homepage:            https://github.com/bChiquet/JamPokerhand
license:             BSD3
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Pokerhand
  build-depends:       base 
  default-language:    Haskell2010

executable JamHaskellPokerhand-exe
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base

test-suite JamHaskellPokerhand-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , JamHaskellPokerhand
                     , hspec
  default-language:    Haskell2010

